RESOLVED FIXED230280
[WPE][GTK] Silence -Wswitch warning enumeration value ‘ExceededProcessCountLimit’ not handled in switch
https://bugs.webkit.org/show_bug.cgi?id=230280
Summary [WPE][GTK] Silence -Wswitch warning enumeration value ‘ExceededProcessCountLi...
Michael Catanzaro
Reported 2021-09-14 15:19:21 PDT
[46/172] Building CXX object Source/WebKit/CMakeFiles/WebKit.dir/UIProcess/API/glib/WebKitNavigationClient.cpp.o ../../Source/WebKit/UIProcess/API/glib/WebKitNavigationClient.cpp: In member function ‘virtual bool NavigationClient::processDidTerminate(WebKit::WebPageProxy&, WebKit::ProcessTerminationReason)’: ../../Source/WebKit/UIProcess/API/glib/WebKitNavigationClient.cpp:111:16: warning: enumeration value ‘ExceededProcessCountLimit’ not handled in switch [-Wswitch] 111 | switch (reason) { | ^
Attachments
Patch (1.37 KB, patch)
2021-09-14 15:21 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2021-09-14 15:21:27 PDT
EWS Watchlist
Comment 2 2021-09-14 15:22:34 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
EWS
Comment 3 2021-09-15 08:23:24 PDT
Committed r282456 (241708@main): <https://commits.webkit.org/241708@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438179 [details].
Note You need to log in before you can comment on or make changes to this bug.