[WPE][GTK] Silence -Wswitch warning enumeration value ‘ExceededProcessCountLimit’ not handled in switch https://bugs.webkit.org/show_bug.cgi?id=230280

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-09-15
Reviewed by Darin Adler.

* UIProcess/API/glib/WebKitNavigationClient.cpp:

Canonical link: https://commits.webkit.org/241708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282456 268f45cc-cd09-0410-ab3c-d52691b4dbfc