Source/WebKit/UIProcess/API/glib/WebKitNavigationClient.cpp
@@ -122,6 +122,7 @@ private:
         case ProcessTerminationReason::RequestedByNetworkProcess:
         case ProcessTerminationReason::NavigationSwap:
         case ProcessTerminationReason::RequestedByGPUProcess:
+        case ProcessTerminationReason::ExceededProcessCountLimit:
             break;
         }
         return false;
